tests/fixtures/security/certs/invalid/self_issued_leaf.eval
subject_fingerprint=bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
validation_time_utc=2026-03-11T08:30:00Z
revocation_policy=require_good
